--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "tailwind-scrollbar": "^3.0.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
