--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "chart.js": "^3.5.1",
     "material-table": "^2.0.3",
     "mui-datatables": "^4.3.0",
     "primereact": "^9.2.0",
