--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "chart.js": "^3.5.1",
+    "lodash": "^4.17.21",
     "material-table": "^2.0.3",
     "mui-datatables": "^4.3.0",
     "primereact": "^9.2.0",
@@ -25,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
